fix changecity
